# cdedent

./: CMakeLists.txt  README.md  cdedent.c  cdedent.cpp  cdedent.h  cdedent.hpp  dedent.h
tests/: main.cpp
